# Yoga-Suggestion

./: .gitignore  HLD_Architecture_Flow.md  HLD_Non_Technical.md  HLD_Simplified_Flow.md  Readme.md
backend/: .gitignore  env.example  index.js  package-lock.json  package.json
backend/config/: db.js
backend/controllers/: chatController.js
backend/data/: test_json.js  yoga_knowledge.json  yoga_poses.json
backend/models/: Interaction.js
backend/routes/: api.js
backend/services/: embeddingService.js  pineconeService.js  poseService.js  ragService.js  safetyService.js  vectorStore.js
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ActionButtons.jsx  AnswerCard.jsx  ChatMessage.jsx  Header.jsx  LoadingState.jsx  SafetyWarning.jsx  SearchInput.jsx  SourcesList.jsx  ThemeToggle.jsx
rag_pipeline/: .env.example  api.py  main.py  prompt_temp.py  pyproject.toml  requirements.txt  requiremnt.txt
rag_pipeline/notebook/: document.ipynb
rag_pipline/: api.py  pyproject.toml
